# iob-calculator

./: .gitattributes  .gitignore  LICENSE  README.MD  README.md  iob.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_dia_validation.py  test_hhmm_validation.py  test_peak_validation.py  test_precision.py
